# Blimpy

./: .gitignore  .zenodo.json  CMakeLists.txt  README.md  logo.sketch  naos.json  readme.md
GUI/: gui.py  gui.ui  main.py  publisher.py
app/: Podfile
app/Blimpy/: Info.plist  Model.swift  ViewController.swift
app/Blimpy.xcodeproj/: project.pbxproj
app/Blimpy.xcworkspace/: contents.xcworkspacedata
apps/: readme.md
apps/XboX-remote/: XBox_bluetooth.maxpat  XBox_remote.maxpat  XBox_wired.maxpat
apps/blender-path/: BlenderController.maxpat  Show.blend  Simple.blend
apps/flock_simulation/: flock_simulation.maxproj
apps/ios-remote/: readme.md
apps/max/: DroneController.maxpat  Paths.blend  lowPassFilter.maxpat  pathGenerator.maxpat  readme.md
apps/max-remote/: blimpy.maxpat  drone.maxpat  osc2mqtt.maxpat  osc2mqtt_mapper.maxpat  rate.maxpat  xbox.maxpat
apps/tools/: motor_check.maxpat
blimp/firmware/: CMakeLists.txt  README.md
blimp/firmware/src/: bat.c  bat.h  exp.c  exp.h  led.c  main.c  mod.c  mot.c  mot.h  pwr.c  pwr.h  srv.c  srv.h
calc/: calc.py
ctrl/: ctrl.pde
libs/: readme.md
manager/: API.md  README.md  add.py  config.py  device_types.yml  feedback.proto  feedback_pb2.py  manager.py  remove.py  sender.py
network/: readme.md
pcb/: blimpy-1.0-B.brd  blimpy-1.0-B.mnt  blimpy.brd  blimpy.csv  blimpy.sch
scripts/: 00_Instal_local_python_env.bat  01_shiftrio.bat  02_NatNet2Manager.bat  03_manager.bat  04_gui.bat  device_types.yml
src/: bat.c  bat.h  exp.c  exp.h  imu.c  imu.h  led.c  led.h  main.c  mod.c  mod.h  srv.c
(+221 files in other folders)
